--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body class="bg-gray-950">
 
    <div class="bg-gray-950 rounded-lg sm:p-6 mt-8 inline-flex flex-col items-stretch">
-      <div id="repository-view">
+      <div id="repository-view" class="pl-12">
 
       </div>
       <div class="flex justify-center items-center">
@@ -30,7 +30,7 @@
             </div>
          </div>
       </div>
-      <div class="mt-2">
+      <div class="mt-8 pl-12">
          <button type="button" class="text-white bg-gradient-to-br from-purple-600 to-blue-500 hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-purple-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2">Sort</button>
    
       </div>
