--- a/index.html
+++ b/index.html
@@ -342,8 +342,11 @@
                <a class='text-blue-400 hover:underline' href="https://github.com/${repo.repoFullName}">${repo.repoFullName}</a>
             </div>
          `;
-         popOver.innerHTML += repo.description
-         popOver.innerHTML += "<br>"
+         if (repo.description) {
+            popOver.innerHTML += repo.description
+            popOver.innerHTML += "<br>"
+         }
+
          popOver.innerHTML += repo.stargazersCount + " stars"
          popOver.innerHTML += "<br>"
          popOver.innerHTML += repo.forks + " forks"
