--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
    <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
 </head>
 <body class="bg-gray-950 flex justify-center">
-
+/
    <div class="bg-gray-950 rounded-lg sm:p-6 mt-8 inline-flex flex-col items-stretch">
-      <div id="repository-view" class="pl-12 flex justify-end pr-0.5">
+      <div id="repository-view" class="pl-12 pr-0.5 mb-8 flex justify-end">
 
       </div>
       <div class="flex justify-center items-center">
