--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
    <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
 </head>
 <body class="bg-gray-950 flex justify-center">
-/
+
    <div class="bg-gray-950 rounded-lg sm:p-6 mt-8 inline-flex flex-col items-stretch">
-      <div id="repository-view" class="pl-12 pr-0.5 mb-8 flex justify-end">
+      <div id="repository-view" class="pl-12 pr-0.5 mb-2 flex justify-end h-60 items-start">
 
       </div>
       <div class="flex justify-center items-center">
@@ -239,6 +239,8 @@
 {"repoFullName": "reddyprasade/Machine-Learning-Interview-Preparation", "stargazersCount": 6, "ownerAvatarUrl": "https://avatars.githubusercontent.com/u/15084222?v=4", "language": "Jupyter Notebook", "description": "Prepare to Technical Skills Here are the essential skills that a Machine Learning Engineer needs, as mentioned Read me files. Within each group are topics that you should be familiar with.  Study Tip: Copy and paste this list into a document and save to your computer for easy referral.  Computer Science Fundamentals and Programming Topics  Data structures: Lists, stacks, queues, strings, hash maps, vectors, matrices, classes & objects, trees, graphs, etc. Algorithms: Recursion, searching, sorting, optimization, dynamic programming, etc. Computability and complexity: P vs. NP, NP-complete problems, big-O notation, approximate algorithms, etc. Computer architecture: Memory, cache, bandwidth, threads & processes, deadlocks, etc. Probability and Statistics Topics  Basic probability: Conditional probability, Bayes rule, likelihood, independence, etc. Probabilistic models: Bayes Nets, Markov Decision Processes, Hidden Markov Models, etc. Statistical measures: Mean, median, mode, variance, population parameters vs. sample statistics etc. Proximity and error metrics: Cosine similarity, mean-squared error, Manhattan and Euclidean distance, log-loss, etc. Distributions and random sampling: Uniform, normal, binomial, Poisson, etc. Analysis methods: ANOVA, hypothesis testing, factor analysis, etc. Data Modeling and Evaluation Topics  Data preprocessing: Munging/wrangling, transforming, aggregating, etc. Pattern recognition: Correlations, clusters, trends, outliers & anomalies, etc. Dimensionality reduction: Eigenvectors, Principal Component Analysis, etc. Prediction: Classification, regression, sequence prediction, etc.; suitable error/accuracy metrics. Evaluation: Training-testing split, sequential vs. randomized cross-validation, etc. Applying Machine Learning Algorithms and Libraries Topics  Models: Parametric vs. nonparametric, decision tree, nearest neighbor, neural net, support vector machine, ensemble of multiple models, etc. Learning procedure: Linear regression, gradient descent, genetic algorithms, bagging, boosting, and other model-specific methods; regularization, hyperparameter tuning, etc. Tradeoffs and gotchas: Relative advantages and disadvantages, bias and variance, overfitting and underfitting, vanishing/exploding gradients, missing data, data leakage, etc. Software Engineering and System Design Topics  Software interface: Library calls, REST APIs, data collection endpoints, database queries, etc. User interface: Capturing user inputs & application events, displaying results & visualization, etc. Scalability: Map-reduce, distributed processing, etc. Deployment: Cloud hosting, containers & instances, microservices, etc. Move on to the final lesson of this course to find lots of sample practice questions for each topic!", "forks": 2, "updatedAt": "2022-11-01 05:22:46"},
 {"repoFullName": "ContionMig/Algorithm-Visualizer", "stargazersCount": 5, "ownerAvatarUrl": "https://avatars.githubusercontent.com/u/37469599?v=4", "language": "C++", "description": "Just a simple program which visualizes some sorting algorithm", "forks": 4, "updatedAt": "2021-09-08 09:47:00"},
 ]
+   
+   const MAX_DESCRIPTION_LENGTH = 100;
 
    let data = [];
    let mouseX = 0;
@@ -343,7 +345,7 @@
             </div>
          `;
          if (repo.description) {
-            popOver.innerHTML += repo.description
+            popOver.innerHTML += trimDescription(repo.description)
             popOver.innerHTML += "<br>"
          }
 
@@ -355,7 +357,7 @@
          popOver.innerHTML += "<br>"
          popOver.innerHTML += generateUpdatedString(repo.updatedAt)
          popOver.style.display = 'none';
-         popOver.classList.add("p-4", "bg-gray-900", "rounded", "text-white", "w-96")
+         popOver.classList.add("p-4", "border-gray-800", "border", "rounded", "text-white", "w-96")
 
          const virtualSlider = document.createElement('div');
          virtualSlider.classList.add("flex", "flex-col", "items-center", "mt-2", "w-4", "h-4")
@@ -534,6 +536,18 @@
             return 150
             break;
       }
+   }
+
+   function trimDescription(description) {
+      if (description.length > MAX_DESCRIPTION_LENGTH) {
+         description = description.substring(0, MAX_DESCRIPTION_LENGTH);
+      }
+      // Continues to trim if last element is a special character
+      // To prevent a hanging special character
+      while (description.charCodeAt(description.length - 1) > 255) {
+         description = description.substring(0, description.length - 1);
+      }
+      return description + "...";
    }
    </script>
 </body>
