--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>POC</title>
    <link rel="stylesheet" href="index.css">
-   <script src="https://unpkg.com/@popperjs/core@2/dist/umd/popper.js"></script>
    <script src="https://cdn.tailwindcss.com"></script>
-   <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
+   <script src="language-colors.js"></script>
 </head>
 <body class="bg-gray-950 flex justify-center">
 
@@ -348,11 +347,17 @@
             repoCard.innerHTML += trimDescription(repo.description)
             repoCard.innerHTML += "<br>"
          }
-         repoCard.innerHTML += repo.stargazersCount + " stars"
-         repoCard.innerHTML += "<br>"
+         repoCard.innerHTML += `
+            <div class="flex items-center">
+               <div class="w-3 h-3 inline-block rounded-full mr-1.5" style="background-color: ${getGithubLanguageColor(repo.language)};"></div>
+               <div class="text-gray-400">${repo.language}</div>
+            </div>
+            <div class="flex items-center">
+               <svg class="text-gray-400 align-center inline-block mr-1" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16"><path d="M8 .25a.75.75 0 0 1 .673.418l1.882 3.815 4.21.612a.75.75 0 0 1 .416 1.279l-3.046 2.97.719 4.192a.751.751 0 0 1-1.088.791L8 12.347l-3.766 1.98a.75.75 0 0 1-1.088-.79l.72-4.194L.818 6.374a.75.75 0 0 1 .416-1.28l4.21-.611L7.327.668A.75.75 0 0 1 8 .25Zm0 2.445L6.615 5.5a.75.75 0 0 1-.564.41l-3.097.45 2.24 2.184a.75.75 0 0 1 .216.664l-.528 3.084 2.769-1.456a.75.75 0 0 1 .698 0l2.77 1.456-.53-3.084a.75.75 0 0 1 .216-.664l2.24-2.183-3.096-.45a.75.75 0 0 1-.564-.41L8 2.694Z"></path></svg>
+               <span class="text-gray-400 align-bottom">${repo.stargazersCount}</span>
+            </div>
+         `
          repoCard.innerHTML += repo.forks + " forks"
-         repoCard.innerHTML += "<br>"
-         repoCard.innerHTML += repo.language
          repoCard.innerHTML += "<br>"
          repoCard.innerHTML += generateUpdatedString(repo.updatedAt)
          repoCard.style.display = 'none';
@@ -548,6 +553,8 @@
       }
       return description + "...";
    }
+
+
    </script>
 </body>
 </html>
