--- a/index.html
+++ b/index.html
@@ -344,22 +344,25 @@
             </div>
          `;
          if (repo.description) {
-            repoCard.innerHTML += trimDescription(repo.description)
-            repoCard.innerHTML += "<br>"
+            repoCard.innerHTML += `<div class="mb-1.5 text-gray-50">${trimDescription(repo.description)}</div>`
          }
          repoCard.innerHTML += `
-            <div class="flex items-center">
-               <div class="w-3 h-3 inline-block rounded-full mr-1.5" style="background-color: ${getGithubLanguageColor(repo.language)};"></div>
-               <div class="text-gray-400">${repo.language}</div>
-            </div>
-            <div class="flex items-center">
-               <svg class="text-gray-400 align-center inline-block mr-1" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16"><path d="M8 .25a.75.75 0 0 1 .673.418l1.882 3.815 4.21.612a.75.75 0 0 1 .416 1.279l-3.046 2.97.719 4.192a.751.751 0 0 1-1.088.791L8 12.347l-3.766 1.98a.75.75 0 0 1-1.088-.79l.72-4.194L.818 6.374a.75.75 0 0 1 .416-1.28l4.21-.611L7.327.668A.75.75 0 0 1 8 .25Zm0 2.445L6.615 5.5a.75.75 0 0 1-.564.41l-3.097.45 2.24 2.184a.75.75 0 0 1 .216.664l-.528 3.084 2.769-1.456a.75.75 0 0 1 .698 0l2.77 1.456-.53-3.084a.75.75 0 0 1 .216-.664l2.24-2.183-3.096-.45a.75.75 0 0 1-.564-.41L8 2.694Z"></path></svg>
-               <span class="text-gray-400 align-bottom">${repo.stargazersCount}</span>
+            <div class="flex">
+               <div class="flex items-center text-sm mr-2">
+                  <div class="w-2.5 h-2.5 inline-block rounded-full mr-1.5" style="background-color: ${getGithubLanguageColor(repo.language)};"></div>
+                  <div class="text-gray-400">${repo.language}</div>
+               </div>
+               <div class="mr-2 text-sm text-gray-400">·</div>
+               <div class="flex items-center text-sm mr-2">
+                  <svg class="text-gray-400 align-center inline-block mr-1" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16"><path d="M8 .25a.75.75 0 0 1 .673.418l1.882 3.815 4.21.612a.75.75 0 0 1 .416 1.279l-3.046 2.97.719 4.192a.751.751 0 0 1-1.088.791L8 12.347l-3.766 1.98a.75.75 0 0 1-1.088-.79l.72-4.194L.818 6.374a.75.75 0 0 1 .416-1.28l4.21-.611L7.327.668A.75.75 0 0 1 8 .25Zm0 2.445L6.615 5.5a.75.75 0 0 1-.564.41l-3.097.45 2.24 2.184a.75.75 0 0 1 .216.664l-.528 3.084 2.769-1.456a.75.75 0 0 1 .698 0l2.77 1.456-.53-3.084a.75.75 0 0 1 .216-.664l2.24-2.183-3.096-.45a.75.75 0 0 1-.564-.41L8 2.694Z"></path></svg>
+                  <span class="text-gray-400 align-bottom">${repo.stargazersCount}</span>
+               </div>
+               <div class="mr-2 text-sm text-gray-400">·</div>
+               <div class="text-gray-400 text-sm">
+                  ${generateUpdatedString(repo.updatedAt)}
+               </div>
             </div>
          `
-         repoCard.innerHTML += repo.forks + " forks"
-         repoCard.innerHTML += "<br>"
-         repoCard.innerHTML += generateUpdatedString(repo.updatedAt)
          repoCard.style.display = 'none';
          repoCard.classList.add("p-4", "border-gray-800", "border", "rounded", "text-white", "w-96")
 
