--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="flex justify-center items-center">
          <div class="w-6 mr-8 hidden sm:block">
             <div class="origin-top-left translate-y-32 -rotate-90 pr-12 whitespace-nowrap">
-               <span class="text-white">Number of stars </span>
+               <span class="text-gray-50">Number of stars </span>
                <svg class="inline w-5"  fill="var(--yellow-300)" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="m12.672.668 3.059 6.197 6.838.993a.75.75 0 0 1 .416 1.28l-4.948 4.823 1.168 6.812a.75.75 0 0 1-1.088.79L12 18.347l-6.116 3.216a.75.75 0 0 1-1.088-.791l1.168-6.811-4.948-4.823a.749.749 0 0 1 .416-1.279l6.838-.994L11.327.668a.75.75 0 0 1 1.345 0Z"/></svg>
             </div>
          </div>
@@ -364,7 +364,8 @@
             </div>
          `
          repoCard.style.display = 'none';
-         repoCard.classList.add("p-4", "border-gray-800", "border", "rounded", "text-white", "w-96")
+         repoCard.classList.add("p-4", "border-gray-800", "border", "rounded", "text-white")
+         repoCard.style.width = getRepoCardWidth();
 
          const virtualSlider = document.createElement('div');
          virtualSlider.classList.add("flex", "flex-col", "items-center", "mt-2", "w-4", "h-4")
@@ -557,6 +558,19 @@
       return description + "...";
    }
 
+   function getRepoCardWidth() {
+      const size = getScreenSize()
+      switch (size) {
+         case 'sm':
+            return "300px"
+         case 'md':
+            return "400px"
+         case 'xl':
+         case '2xl':
+         case 'lg':
+            return "500px"
+      }
+   }
 
    </script>
 </body>
