--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>POC</title>
+   <title>Sorting Visualizer of Sorting Visualizer</title>
+   <link rel="graph icon" type="image/png" href="favicon.png"/>
    <link rel="stylesheet" href="index.css">
    <script src="https://cdn.tailwindcss.com"></script>
    <script src="language-colors.js"></script>
