--- a/index.html
+++ b/index.html
@@ -9,12 +9,20 @@
    <script src="https://cdn.tailwindcss.com"></script>
    <script src="language-colors.js"></script>
    <script src="original-data.js"></script>
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
 </head>
 <body class="bg-gray-950 flex justify-center">
 
    <div class="bg-gray-950 rounded-lg sm:p-6 mt-8 inline-flex flex-col items-stretch">
-      <div id="repository-view" class="sm:pl-12 pr-0.5 mb-2 flex justify-start lg:justify-end h-52 items-start break-all sm:break-normal">
+      <div class="flex justify-between flex-col lg:flex-row">
+         <div>
+            <h1 class="text-white sm:pl-12 text-2xl lg:text-3xl leading-tight mb-12">Sorting Visualizer <br>of Sorting Visualizers</h1>
+         </div>
+         <div id="repository-view" class="sm:pl-12 pr-0.5 mb-2 flex justify-start lg:justify-end h-52 items-start break-all sm:break-normal">
 
+         </div>
       </div>
       <div class="flex justify-center items-center">
          <div class="w-6 mr-8 hidden sm:block">
