--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
    <div class="bg-gray-950 rounded-lg sm:p-6 mt-8 inline-flex flex-col items-stretch">
       <div class="flex justify-between flex-col lg:flex-row">
-         <div>
-            <h1 class="text-white sm:pl-12 text-2xl lg:text-3xl leading-tight mb-12">Sorting Visualizer <br>of Sorting Visualizers</h1>
+         <div class="flex sm:justify-center">
+            <h1 class="text-white text-2xl lg:text-3xl leading-tight mb-12">Sorting Visualizer <br>of Sorting Visualizers</h1>
          </div>
          <div id="repository-view" class="sm:pl-12 pr-0.5 mb-2 flex justify-start lg:justify-end h-52 items-start break-all sm:break-normal">
 
