--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Sorting Visualizer of Sorting Visualizer</title>
-   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-   <link rel="icon" type="image/png" sizes="32x32" href="/favicon.ico">
-   <link rel="icon" href="/icon.svg" type="image/svg+xml">
+   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=2">
+   <link rel="icon" type="image/png" sizes="32x32" href="/favicon.ico?v=7">
+   <link rel="icon" href="/icon.svg?v=2" type="image/svg+xml">
    <link rel="manifest" href="/site.webmanifest">
    <link rel="stylesheet" href="index.css">
    <script src="https://cdn.tailwindcss.com"></script>
